deployment/manifests/Ingress/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-ingress
    component: controller
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      name: http
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30008
    - port: 443
      name: https
      targetPort: 443
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30009
