deployment/manifests/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    # certmanager.k8s.io/issuer: "letsencrypt-production"
spec:
  tls:
    - secretName: dirk-jan-eu-tls
      hosts:
        - dirk-jan.eu
        - bff.fit.dirk-jan.eu
        - fit.dirk-jan.eu
        - identity.dirk-jan.eu
  rules:
    - host: bff.fit.ingress.dirk-jan.eu
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 80
    - host: fit.ingress.dirk-jan.eu
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: fit-frontend
                port:
                  number: 80
    - host: identity.ingress.dirk-jan.eu
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 80
